history response added to dashboard summary